Deploy & resource metrics
